--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="com.angeluz.freyja" xmlns:android="http://schemas.android.com/apk/res/android">
+  <application
+      android:label="La Voz de Freyja (Standalone)"
+      android:allowBackup="true"
+      android:supportsRtl="true"
+      android:theme="@style/Theme.Material3.DayNight">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+      <activity android:name=".StandaloneActivity" android:exported="true">
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN"/>
+              <category android:name="android.intent.category.LAUNCHER"/>
+          </intent-filter>
+      </activity>
 
-    <application
-        android:allowBackup="true"
-        android:label="La Voz de Freyja"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Freyja">
-
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <!-- Si no usas servicios, no declares nada extra -->
-    </application>
+      <!-- Deja tu MainActivity y demás tal cual, sin intent-filter LAUNCHER -->
+  </application>
 </manifest>
