--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,18 +19,16 @@ jobs:
           distribution: temurin
           java-version: "17"
 
-      # setup-android v3 ya NO acepta api-level/build-tools/ndk como inputs.
-      # Usa `packages:` para instalar lo necesario del SDK.
+      # Acción oficial (v3): fija cmdline-tools, acepta licencias e instala paquetes
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
+          cmdline-tools-version: 11076708   # fija versión estable del CLI
+          accept-android-sdk-licenses: true
           packages: |
-            tools
             platform-tools
             platforms;android-34
             build-tools;34.0.0
-            ndk;25.1.8937393
-            cmake;3.22.1
 
       - name: Configure Gradle
         uses: gradle/actions/setup-gradle@v3
